# serializer version: 1
# name: test_beneficiary_details
  '''
  <div class="col-12" id="beneficiary_details_container">
                      
                      <div class="c-box mb-3 mb-lg-5">
                          <h2>Données administratives</h2>
                          <hr/>
                          <div class="row">
                              <div class="col-12 col-md-6 mb-3 mb-md-0">
                                  <ul class="list-data">
                                      <li>
                                          <small>Prénom</small>
                                          <strong>Jane</strong>
                                      </li>
                                      <li>
                                          <small>Nom</small>
                                          <strong>Doe</strong>
                                      </li>
                                      <li>
                                          <small>Date de naissance</small>
                                          
                                              <strong>01/01/1990</strong>
                                          
                                      </li>
                                      <li>
                                          <small>Adresse e-mail</small>
                                          <strong>jane.doe@test.local</strong>
                                          
                                          <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="jane.doe@test.local" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_email">
      <i aria-hidden="true" class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                      </li>
                                      <li>
                                          <small>Téléphone</small>
                                          
                                              <strong>06 12 34 56 78</strong>
                                              
                                              <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0612345678" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                          
                                      </li>
                                      <li>
                                          <small>Adresse</small>
                                          
                                              <address>12 rue Georges Bizet, 35000 Rennes</address>
                                          
                                      </li>
                                      <li>
                                          <small>Numéro de sécurité sociale</small>
                                          
                                              <strong>290010101010125</strong>
                                          
                                      </li>
                                  </ul>
                              </div>
                              <div class="col-12 col-md-6">
                                  <ul class="list-data">
                                      <li>
                                          <small>Niveau de formation</small>
                                          
                                              <strong>Formation de niveau BAC</strong>
                                          
                                      </li>
                                      
                                      
                                      
                                      
                                      
                                      
                                      
                                      
                                      <li>
                                          <small>Identifiant France Travail (ex Pôle emploi)</small>
  
                                          
                                              <i class="text-disabled">Non renseigné</i>
                                          
                                      </li>
                                      <li>
                                          <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-ailleurs">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">
                                                          La fonctionnalité est en test dans deux départements et sera bientôt disponible pour votre territoire.
                                                      </p>
                                                  
                                              </div>
                                          </div>
                                      </li>
                                  </ul>
                              </div>
                          </div>
                      </div>
                      
  
  
  
  <div class="c-box mb-3 mb-lg-5" id="gps_intervenants">
      <h2 class="border-bottom pb-3">Intervenant</h2>
      <ul class="list-unstyled p-0 m-0">
          
              <li class="c-box--results__header px-0 gps_intervenant">
                  <div class="c-box--results__summary flex-grow-1">
                      <i aria-hidden="true" class="ri-user-line"></i>
                      <div>
                          <h3 class="mb-2">
                              Pierre DUPONT
                              <span class="font-weight-normal fs-6 fst-italic">
                                  
                                  
                                  (prescripteur pour Les Olivades)
                                  
                              </span>
                          </h3>
  
                          <ul class="list-unstyled">
                              <li class="py-1">
                                  <i aria-hidden="true" class="ri-mail-line font-weight-normal me-1"></i>
                                  <span>pierre.dupont@test.local</span>
                                  
                                  <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="pierre.dupont@test.local" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_member_email">
      <i aria-hidden="true" class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                              </li>
                              <li class="py-1">
                                  <i aria-hidden="true" class="ri-phone-line font-weight-normal me-1"></i>
                                  
                                      <span>06 12 34 56 78</span>
                                      
                                      <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0612345678" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_member_phone">
      <i aria-hidden="true" class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                  
                              </li>
                              <li class="py-1">
                                  <i aria-hidden="true" class="ri-calendar-line font-weight-normal me-1"></i>Suivi depuis le <strong>21/06/2024</strong>
                              </li>
                              
                                  <li class="py-1">
                                      <i aria-hidden="true" class="ri-map-pin-user-line font-weight-normal me-1"></i><strong>Référent</strong>
                                  </li>
                              
                          </ul>
                      </div>
                  </div>
              </li>
          
      </ul>
  </div>
  
                  </div>
  '''
# ---
# name: test_contact_information_display[info_displayed]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-30">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <ul class="list-unstyled">
                                                          <li>
                                                              <i aria-hidden="true" class="ri-user-line font-weight-normal me-1"></i>Test MacTest
                                                          </li>
                                                          <li>
                                                              <i aria-hidden="true" class="ri-mail-line font-weight-normal me-1"></i>
                                                              <a aria-label="Contacter Test MacTest par e-mail" class="text-break text-decoration-none" href="mailto:test.mactest@francetravail.fr">test.mactest@francetravail.fr</a>
                                                              <button class="btn-link font-weight-medium ms-1" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="test.mactest@francetravail.fr" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                                          </li>
                                                      </ul>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_contact_information_display[info_not_available]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-30">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">Le conseiller emploi France Travail de ce bénéficiaire n’est pas connu.</p>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_contact_information_display_not_live[preview_displayed]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-ailleurs">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">
                                                          La fonctionnalité est en test dans deux départements et sera bientôt disponible pour votre territoire.
                                                      </p>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_dashboard_card
  '''
  <div class="col mb-3 mb-md-5" id="gps-card">
      <div class="c-box p-0 h-100">
          <div class="c-box__header--gps p-3 p-lg-4">
              <span class="h4 m-0">GPS</span>
          </div>
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Gérer les utilisateurs suivis dans votre groupe." class="btn-link btn-ico" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="tdb_liste_beneficiaires" href="/gps/groups">
                          <i class="ri-article-line ri-lg font-weight-normal align-self-start"></i>
                          <span>Visualiser les bénéficiaires</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Créer ou rejoindre un groupe." class="btn-link btn-ico" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="tbd_ajout_groupe" href="/gps/groups/join?back_url=/dashboard/">
                          <i class="ri-play-list-add-line ri-lg font-weight-normal align-self-start"></i>
                          <span>Ajouter un bénéficiaire</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Inviter un partenaire." class="btn-link btn-ico" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="tdb_inviter_partenaire" href="https://hello-tally.so/r/w5kLqM?user_public_id=03580247-b036-4578-bf9d-f92c9c2f68cd&amp;user_first_name=Pierre&amp;user_last_name=Dupont&amp;&amp;user_organization_uid=0260ad4f-2008-48bd-88cc-b41c0211e219&amp;user_organization_name=Pres. Org." rel="noopener" target="_blank">
                          <i class="ri-mail-send-line ri-lg font-weight-normal align-self-start"></i>
                          <span>Inviter un partenaire</span>
                          <i class="ri-external-link-line font-weight-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  '''
# ---
# name: test_my_groups[test_my_groups__group_card]
  '''
  <div class="my-3 my-md-4 s-box__row row membership-card">
                  <div class="c-box--results__header">
  
                      <div class="c-box--results__summary">
                          <i aria-hidden="true" class="ri-user-line"></i>
                          <div>
                              <h3>Jane DOE</h3>
                              <span>jane.doe@test.local</span>
                          </div>
                      </div>
                  </div>
  
                  <hr class="m-0 pb-4"/>
  
                  <div class="d-flex justify-content-between mb-4">
                      <div>
                          
                              <div>
                                  <div>
                                      
                                      
                                      Vous avez ajouté ce bénéficiaire le <strong>21/06/2024</strong>.
                                  </div>
                                  
                                      1 autre professionnel
                                      est
                                      intervenu auprès de ce bénéficiaire.
                                  
                              </div>
                          
                      </div>
  
  
                  </div>
                  <div class="d-flex justify-content-between">
  
                      
                          <div>
  
                              
                              <a aria-label="Ne plus suivre Jane DOE" class="btn btn-warning btn-block w-100 w-md-auto btn-ico" data-bs-body="Vous pourrez toujours suivre ce bénéficiaire de nouveau plus tard." data-bs-confirm-class="btn-danger" data-bs-confirm-text="Ne plus suivre" data-bs-confirm-url="/gps/groups/[PK of Group]/leave" data-bs-target="#confirm_modal" data-bs-title="Êtes-vous sûr de ne plus vouloir suivre Jane DOE ?" data-bs-toggle="modal" href="/users/details/7614fc4b-aef9-4694-ab17-12324300180a">
                                  <i aria-hidden="true" class="ri-user-unfollow-line"></i>
                                  <span>Ne plus suivre</span>
  
                              </a>
  
  
                              
                          </div>
  
  
                          <div>
                              
                                  
  
                                  <a aria-label="Devenir référent de Jane DOE" class="btn btn-outline-success btn-block w-100 w-md-auto btn-ico" data-bs-body="Vous pourrez toujours ne plus être référent de ce bénéficiaire plus tard." data-bs-confirm-class="btn-success" data-bs-confirm-text="Devenir référent" data-bs-confirm-url="/gps/groups/[PK of Group]/toggle_referent" data-bs-target="#confirm_modal" data-bs-title="Êtes-vous sûr de vouloir devenir référent de Jane DOE ?" data-bs-toggle="modal" href="/users/details/7614fc4b-aef9-4694-ab17-12324300180a">
  
                                      <i aria-hidden="true" class="ri-map-pin-user-line font-weight-normal me-1"></i>
                                      <span>Devenir référent</span>
  
                                  </a>
  
                              
                              <a aria-label="Consulter la fiche de Jane DOE" class="btn btn-outline-primary btn-block btn-ico w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="GPS_liste_groupes" data-matomo-event="true" data-matomo-option="consulter_fiche_candidat" href="/users/details/7614fc4b-aef9-4694-ab17-12324300180a">
                                  <i aria-hidden="true" class="ri-eye-line ri-xl font-weight-medium"></i>
                                  <span>Consulter la fiche</span>
                              </a>
                          </div>
                      
  
                  </div>
              </div>
  '''
# ---
